# robotframework_twitch

./: .dockerignore  .env  .variable.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
Resources/: AndroidDevices.robot  DefineMobileBrowser.robot  HandleModalsStreamingScreen.robot  iOSDevices.robot
Resources/Search/: Search.robot
Results/: log.html  output.xml  report.html
Tests/twitch/FunctionalTestSuite/: TwitchVideoSearch.robot  TwitchVideoSearchSpecific.robot  VideoSeach_Android.robot  VideoSearch_Android.robot  VideoSearch_iOS.robot
Testsuites/twitch/: test_test.robot
Testsuites/twitch/FunctionalTestSuite/: VideoSearch_Android.robot  VideoSearch_iOS.robot
keywords/: HandleModalsStreamingScreen.robot  Search.robot  _DefineMobileBrowser.robot  common.resource
output/: log.html  output.xml  report.html
patches/: robotframework.patch
profiles/devices/: android.resource  iOS.resource
