[tool.poetry]
name = "robotframework_test"
version = "0.1.0"
description = "Robot framework test"
authors = ["CubeVic <victoraguirre.f@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
robotframework = "^6.0.2"
selenium = "^4.7.2"
Appium-Python-Client = "^2.7.1"
robotframework-seleniumlibrary = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
